[gd_scene load_steps=2 format=3 uid="uid://shop"]

[ext_resource type="Script" path="res://Scripts/Shop.gd" id="1"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StockLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""

[node name="OrderLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pedido actual: ninguno"

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = ""

[node name="World" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(1024, 340)
layout_mode = 2
size_flags_vertical = 3

[node name="Spawn" type="ColorRect" parent="VBoxContainer/World"]
offset_left = 74.0
offset_top = 184.0
offset_right = 106.0
offset_bottom = 216.0
color = Color(0.4, 0.8, 0.4, 1)

[node name="Queue1" type="ColorRect" parent="VBoxContainer/World"]
offset_left = 264.0
offset_top = 184.0
offset_right = 296.0
offset_bottom = 216.0
color = Color(0.8, 0.8, 0.3, 1)

[node name="Queue2" type="ColorRect" parent="VBoxContainer/World"]
offset_left = 414.0
offset_top = 184.0
offset_right = 446.0
offset_bottom = 216.0
color = Color(0.8, 0.8, 0.3, 1)

[node name="Counter" type="ColorRect" parent="VBoxContainer/World"]
offset_left = 624.0
offset_top = 170.0
offset_right = 656.0
offset_bottom = 230.0
color = Color(0.3, 0.5, 0.9, 1)

[node name="Exit" type="ColorRect" parent="VBoxContainer/World"]
offset_left = 934.0
offset_top = 184.0
offset_right = 966.0
offset_bottom = 216.0
color = Color(0.9, 0.4, 0.4, 1)

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Volver al Castle"

[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
